# elevate

./: AGENTS.md  Cargo.toml  README.md  exp  s1.ers  s1.rs
docs/: ast.md  bench-latest.csv  editor-extensions.md  external-frontend-path.md  language-design.md  quiche-feedback.md  system-design.md  type-inference-plan.md  type-inference-progress.md  type-system-plan.md  type-system-progress.md  v0.9.0-types-reorg.md
examples/: match.ers  point.elev  point.ers  result_flow.elev  result_flow.ers
examples/prosemaster/: .gitignore  Cargo.toml  elevate.interop
examples/prosemaster/src/: app.ers  host.rs  main.ers  numeric.ers  runtime.ers
examples/terminal-board-games/: Cargo.toml  README.md  ROADMAP.md
examples/terminal-board-games/apps/sudoku-cli/: Cargo.toml
examples/terminal-board-games/apps/sudoku-cli/src/: main.rs
examples/terminal-board-games/crates/game-ai/: Cargo.toml
examples/terminal-board-games/crates/game-ai/src/: lib.rs
examples/terminal-board-games/crates/game-board/: Cargo.toml
examples/terminal-board-games/crates/game-board/src/: lib.rs
examples/terminal-board-games/crates/game-core/: Cargo.toml
examples/terminal-board-games/crates/game-core/src/: lib.rs
examples/terminal-board-games/crates/game-loop/: Cargo.toml
examples/terminal-board-games/crates/game-loop/src/: lib.rs
examples/terminal-board-games/crates/game-save/: Cargo.toml
examples/terminal-board-games/crates/game-save/src/: lib.rs
examples/terminal-board-games/crates/game-scenes/: Cargo.toml
examples/terminal-board-games/crates/game-scenes/src/: lib.rs
examples/terminal-board-games/crates/game-sudoku/: Cargo.toml
examples/terminal-board-games/crates/game-sudoku/src/: lib.rs
examples/terminal-board-games/crates/game-ui-term/: Cargo.toml
examples/terminal-board-games/crates/game-ui-term/src/: lib.rs
examples/terminal-board-games/crates/platform-host/: Cargo.toml
examples/terminal-board-games/crates/platform-host/src/: lib.rs
examples/terminal-board-games/crates/platform-macos/: Cargo.toml
examples/terminal-board-games/crates/platform-macos/src/: lib.rs
examples/terminal-board-games/crates/renderer-terminal/: Cargo.toml
examples/terminal-board-games/crates/renderer-terminal/src/: lib.rs
src/: ast.rs  borrow_promotion.rs  codegen.rs  crate_builder.rs  diag.rs  emit_elevate.rs  lexer.rs  lib.rs  liveness.rs  main.rs  ownership_planner.rs  parser.rs  passes.rs  polonius.rs  rustdex_adapter.rs  rustdex_backend.rs  source.rs  source_map.rs  test_runner.rs
tests/: borrow_engine.rs  cli.rs  data_structures.rs  feedback_issues.rs  inference_missing_values.rs  literal_bidi.rs  ocaml_generics_story.rs  rustdex_integration.rs  (+5 more)
(+78 files in other folders)
