[package]
name = "prosemaster"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2"
font8x8 = "0.3"
minifb = "0.27"
sdl2 = { version = "0.38", default-features = false, features = ["bundled", "static-link"] }

[lib]
name = "prosemaster"
path = "src/lib.rs"

[[bin]]
name = "prosemaster"
path = "src/main.rs"
