[workspace]
members = [
  "crates/game-core",
  "crates/game-loop",
  "crates/game-ui-term",
  "crates/renderer-terminal",
  "crates/platform-macos",
  "crates/game-sudoku",
  "apps/sudoku-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Elevate"]

[workspace.lints.rust]
unsafe_code = "forbid"
