[workspace]
members = [
  "crates/game-board",
  "crates/game-core",
  "crates/game-ai",
  "crates/game-loop",
  "crates/game-scenes",
  "crates/game-save",
  "crates/game-ui-term",
  "crates/platform-host",
  "crates/renderer-terminal",
  "crates/platform-macos",
  "crates/game-sudoku",
  "apps/sudoku-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Elevate"]

[workspace.lints.rust]
unsafe_code = "forbid"
