[package]
name = "sudoku-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
game-core = { path = "../../crates/game-core" }
renderer-terminal = { path = "../../crates/renderer-terminal" }
platform-macos = { path = "../../crates/platform-macos" }
game-sudoku = { path = "../../crates/game-sudoku" }
